@@ -582,6 +582,9 @@ Surface.set_palette([[r, g, b], ...]) -> None
 </tt></font><ul>
 This will replace the entire palette with color
 information you provide.
+<br>&nbsp;<br>
+You can pass an incomplete list of RGB values, and
+this will only change the first colors in the palette.
 </ul><br>&nbsp;<br>
 
 <a name=set_palette_at><font size=+2><b>set_palette_at
